# nscb_rust

./: .gitignore  Cargo.toml  README.md  run_parity_exact.sh
.github/workflows/: release-windows.yml  release.yml
src/: cli.rs  error.rs  lib.rs  main.rs  nutdb.rs
src/crypto/: aes_ctr.rs  aes_ecb.rs  aes_xts.rs  hash.rs  mod.rs
src/formats/: cnmt.rs  hfs0.rs  mod.rs  nacp.rs  nca.rs  ncz.rs  nsp.rs  pfs0.rs  ticket.rs  types.rs  xci.rs
src/keys/: derivation.rs  keystore.rs  mod.rs
src/ops/: compress.rs  convert.rs  create.rs  decompress.rs  dspl.rs  info.rs  merge.rs  mod.rs  split.rs  trim.rs
src/util/: align.rs  io.rs  mod.rs  progress.rs
